k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: randevux-web-svc
  namespace: default
  labels:
    app: randevux-web
spec:
  type: ClusterIP
  selector:
    app: randevux-web
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
